# SPD1177-SDK

./: LICENSE.md  SPD1177_FW_V12_0_4.7z
IDE_Support/EWARM/: DebugCtrl.mac
IDE_Support/EWARM/flashloader/: FlashSPC1169.board  FlashSPC1169.flash  FlashSPC1169.out  Readme.txt
IDE_Support/MDK-ARM/: Readme.txt  SPC1169_128K.FLM  SPC1169_64K.FLM  SPC1169_RDN.FLM
Libraries/CMSIS/core/: core_cm4.h  core_cmFunc.h  core_cmInstr.h  core_cmSimd.h
Libraries/CMSIS/device/: system_spc1169.c  system_spc1169.h
Libraries/drivers/inc/: License.txt  adc.h  can.h  clock.h  comp.h  crc.h  dma.h  ecap.h  engr.h  epwr.h  flashc.h  gpio.h  hwlib.h  i2c.h  pga.h  phcomp.h  pin.h  power.h  pwm.h  spc1169.h  spd1177.h  spd1177_hv.h  spd1179.h  spd1179_hv.h  spi.h  system.h  timer.h  uart.h  wdt.h
Libraries/drivers/src/: adc.c  can.c  clock.c  comp.c  crc.c  dma.c  ecap.c  engr.c  epwr.c  gpio.c  hwlib.c  i2c.c  pga.c  phcomp.c  pin.c  power.c  pwm.c  spd1177_hv.c  spd1179_hv.c  spi.c  system.c  timer.c  uart.c  wdt.c
Libraries/lin_stack/inc/: lin.h  lin_common_api.h  lin_common_proto.h  lin_commontl_api.h  lin_commontl_proto.h  lin_diagnostic_service.h  lin_lin21_api.h  lin_lin21_proto.h  lin_lin21tl_api.h  lin_lld_uart.h
Libraries/lin_stack/src/: lin.c  lin_common_api.c  lin_common_proto.c  lin_commontl_api.c  lin_commontl_proto.c  lin_diagnostic_service.c  lin_lin21_api.c  lin_lin21_proto.c  lin_lin21tl_api.c  lin_lld_uart.c
Project/: create_target.py
Project/0_Examples/: SPD1177 Peripheral Examples.xlsx  SPD1179 Peripheral Examples.xlsx
Project/0_Examples/10_10_ADC_With_DPGA/: main.c
Project/0_Examples/10_1_ADC_Calibration/: main.c
Project/0_Examples/10_2_ADC_Open_Detect/: main.c
Project/0_Examples/10_3_ADC_Short_Detect/: main.c
Project/0_Examples/10_4_ADC_Single_Ended_Result/: main.c
Project/0_Examples/10_5_ADC_Differential_Result/: main.c
Project/0_Examples/10_6_ADC_Triggered_by_Timer/: main.c
Project/0_Examples/10_7_ADC_Continous_Mode_and_Conversion_Priority/: isr.c  main.c
Project/0_Examples/10_8_ADC_PPU/: isr.c  main.c
Project/0_Examples/10_9_ADC_With_SPGA/: main.c
Project/0_Examples/11_1_SPGA_Calibration/: main.c
Project/0_Examples/11_2_DPGA_Calibration/: main.c
Project/0_Examples/12_1_Comparator/: main.c
Project/0_Examples/13_1_BEMF_Comparator/: isr.c  main.c
Project/0_Examples/14_1_DAC_to_ADC/: isr.c  main.c
Project/0_Examples/14_2_ADC_to_DAC/: main.c
Project/0_Examples/16_1_UART_RX_Int/: main.c
Project/0_Examples/16_2_UART_RX_and_SentBack/: main.c
Project/0_Examples/16_2_UART_TX_and_CheckRX/: main.c
Project/0_Examples/17_1_SPI_Master_B2B_TxRx_Polling/: main.c
Project/0_Examples/17_1_SPI_Slave_B2B_TxRx_Polling/: main.c
Project/0_Examples/17_2_SPI_Master_TxRx_Polling/: main.c
Project/0_Examples/17_2_SPI_Slave_TxRx_Polling/: main.c
Project/0_Examples/17_3_SPI_Master_TxRx_Int/: isr.c  main.c
Project/0_Examples/17_3_SPI_Slave_TxRx_Int/: main.c
Project/0_Examples/18_1_Flash_Operation/: main.c
Project/0_Examples/18_2_Flash_Sector_Protect/: isr.h  main.c
Project/0_Examples/18_3_Flash_Call_User_Func/: func.h  isr.c  main.c
Project/0_Examples/18_3_Flash_User_Func/: func.h  main.c
Project/0_Examples/18_5_Flash_With_ISR_In_RAM/: func.c  func.h  main.c
Project/0_Examples/18_6_Flash_EEPROM_Emulation_Controller/: eeprom_lib.c  eeprom_lib.h  isr.h  main.c
Project/0_Examples/18_7_Flash_MEEPROM_Emulation_Controller/: main.c  meeprom_lib.c  meeprom_lib.h
Project/0_Examples/19_1_System_Voltage_Monitor/: isr.c  main.c
Project/0_Examples/19_2_System_GPIO_Trigger_NMI/: isr.c  main.c
Project/0_Examples/19_3_System_Boot_Log_and_ECC_Error/: main.c
Project/0_Examples/19_4_System_Stop_Wakeup/: main.c
Project/0_Examples/19_5_System_Sleep_Wakeup/: main.c
Project/0_Examples/19_6_System_ECC_Validation/: isr.c  main.c
Project/0_Examples/20_10_DMA_ADC_to_UART/: main.c
Project/0_Examples/20_1_DMA_Memory_to_Memory/: main.c
Project/0_Examples/20_2_DMA_Memory_to_SPI/: main.c
Project/0_Examples/20_3_DMA_Memory_to_UART/: main.c
Project/0_Examples/20_4_DMA_SPI_to_Memory/: isr.c  main.c
Project/0_Examples/20_5_DMA_UART_to_Memory/: isr.c  main.c
Project/0_Examples/20_6_DMA_ADC_to_Memory/: main.c
Project/0_Examples/20_7_DMA_SPI_to_UART/: main.c
Project/0_Examples/20_8_DMA_UART_to_SPI/: main.c
Project/0_Examples/20_9_DMA_ADC_to_SPI/: main.c
Project/0_Examples/23_10_Predriver_PMUCLKERR_Trigger_TZ/: isr.c  main.c
Project/0_Examples/23_11_Predriver_PMUOT_Trigger_TZ/: main.c
Project/0_Examples/23_1_Predriver_Operation/: isr.c  isr.h  main.c
Project/0_Examples/23_3_Predriver_VDS_Monitor_Trigger_TZ/: main.c
Project/0_Examples/23_4_Predriver_Strength_Optimize/: main.c
Project/0_Examples/23_5_Predriver_Propagation_Delay/: main.c
Project/0_Examples/23_6_Predriver_VBAT_UVOV_Trigger_TZ/: main.c
Project/0_Examples/23_7_Predriver_LIN_TX_Timeout_Trigger_TZ/: main.c
Project/0_Examples/23_8_Predriver_VDD5_OV_Trigger_TZ/: main.c
Project/0_Examples/23_9_Predriver_VBATCP_UVOV_Trigger_TZ/: isr.c  main.c
Project/1_Application/RTT_Printf/GCC/: CMakeLists.txt
Utilities/: delay.c  delay.h  retarget.c
(+324 files in other folders)
